<resources>
    <string name="app_name">Prime Junk</string>
    <string name="sign_in_with">sign in with</string>
    <string name="continue_with">Continue with</string>
    <string name="profile">Profile</string>
    <string name="prime_junk">Prime Junk</string>
    <string name="earn_coins">Earn Coins</string>
    <string name="history">History</string>
    <string name="redeem_coins">Redeem Coins</string>
    <string name="log_out">Log Out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="coin">Coin</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="degradable_pick_ups">Degradable Pick Ups</string>
    <string name="recyclable_pick_ups">Recyclable Pick Ups</string>
    <string name="solve_quizes">Solve Quizes</string>
    <string name="play_games">Play Games</string>
    <string name="start">Start</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="loading_please_wait">Loading...please wait...</string>
</resources>